--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   path: ^1.9.1
   equatable: ^2.0.8
   crypto: ^3.0.5
+  get_it: ^9.2.0
+  bloc: ^9.2.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
